Added support of backend flag (for non-displayed fields)